[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Tarefas/GeometriaAnalitica.gd" type="Script" id=1]

[node name="GeometriaAnalitica" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Fundo" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_top = -57.0
margin_right = -71.0
color = Color( 0.156863, 0.14902, 0.14902, 0.662745 )

[node name="FundoRes" type="ColorRect" parent="."]
margin_left = 215.0
margin_top = 156.0
margin_right = 235.0
margin_bottom = 167.0
color = Color( 0.12549, 0.113725, 0.113725, 0.729412 )

[node name="Numeros" type="VBoxContainer" parent="."]
margin_left = 65.0
margin_top = 141.0
margin_right = 133.0
margin_bottom = 257.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="HBoxContainer" type="HBoxContainer" parent="Numeros"]
margin_right = 97.0
margin_bottom = 68.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_left = 14.0
margin_right = 34.0
margin_bottom = 68.0

[node name="Button7" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "7"

[node name="Button4" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "4"

[node name="Button1" type="Button" parent="Numeros/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "1"

[node name="VBoxContainer2" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_left = 38.0
margin_right = 58.0
margin_bottom = 68.0

[node name="Button8" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
text = "8"

[node name="Button5" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "5"

[node name="Button2" type="Button" parent="Numeros/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "2"

[node name="VBoxContainer3" type="VBoxContainer" parent="Numeros/HBoxContainer"]
margin_left = 62.0
margin_right = 82.0
margin_bottom = 68.0

[node name="Button9" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_right = 20.0
margin_bottom = 20.0
text = "9"

[node name="Button6" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_top = 24.0
margin_right = 20.0
margin_bottom = 44.0
text = "6"

[node name="Button3" type="Button" parent="Numeros/HBoxContainer/VBoxContainer3"]
margin_top = 48.0
margin_right = 20.0
margin_bottom = 68.0
text = "3"

[node name="HBoxContainer2" type="HBoxContainer" parent="Numeros"]
margin_top = 72.0
margin_right = 97.0
margin_bottom = 92.0

[node name="Button0" type="Button" parent="Numeros/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
text = "0"

[node name="ButtonPonto" type="Button" parent="Numeros/HBoxContainer2"]
margin_left = 24.0
margin_right = 40.0
margin_bottom = 20.0
text = "."

[node name="ButtonMenos" type="Button" parent="Numeros/HBoxContainer2"]
margin_left = 44.0
margin_right = 61.0
margin_bottom = 20.0
text = "-"

[node name="ButtonApagar" type="Button" parent="Numeros/HBoxContainer2"]
margin_left = 65.0
margin_right = 97.0
margin_bottom = 20.0
text = "del"

[node name="Finalizar" type="Button" parent="."]
margin_left = 210.0
margin_top = 177.0
margin_right = 275.0
margin_bottom = 197.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Finalizar"

[node name="Resultado" type="Label" parent="."]
margin_left = 216.0
margin_top = 157.0
margin_right = 246.0
margin_bottom = 171.0
rect_scale = Vector2( 0.6, 0.6 )
clip_text = true

[node name="Titulo" type="Label" parent="."]
margin_left = 113.0
margin_top = 139.0
margin_right = 348.0
margin_bottom = 170.0
rect_scale = Vector2( 0.4, 0.4 )
text = "Calcule a distância entre dois pontos
(OBS: não precisa calcular a raíz)"
align = 1

[node name="Pontos" type="Label" parent="."]
margin_left = 118.0
margin_top = 163.0
margin_right = 203.0
margin_bottom = 184.0
rect_scale = Vector2( 0.8, 0.8 )
align = 1

[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer/VBoxContainer3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer2/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer2/ButtonPonto" to="." method="_on_ButtonPonto_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer2/ButtonMenos" to="." method="_on_ButtonMenos_pressed"]
[connection signal="pressed" from="Numeros/HBoxContainer2/ButtonApagar" to="." method="_on_ButtonApagar_pressed"]
[connection signal="pressed" from="Finalizar" to="." method="_on_Finalizar_pressed"]
